--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,16 @@ p {
     margin: 0;
 }
 
+li {
+    padding: 10px;
+    border-radius: 5px;
+
+}
+
+input {
+    border-radius: 5px;
+    outline: none;
+}
 
 li .todo {
     flex: 0 0 20px;
@@ -14,7 +24,10 @@ li .todo {
     border-radius: 30px;
     margin-right: 15px;
     border: 2px solid #333;
-
+}
+li:hover {
+    background-color: #ddd;
+    cursor: pointer;
 }
 
 li .todo.done {
